--- a/magazine.html
+++ b/magazine.html
@@ -5,22 +5,24 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
+  <img src="{{coverImage}}">
+
   {{#each articles }}
   	<h1> {{publication.name}} </h1>
   	<h3> {{display_date}} </h3>
-  	{{body_html}}
+  	<span> {{body_html}} </span>
   {{/each}}
 
 <h3> Tags </h3>
   {{tags}}
 
 <h3> Images </h3> 
-	{{ images }}
+	{{#each images}}
+		<img src="{{image}}">
+	{{/each}}
+
+	
 
 
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
